Fixed date display not aligning with calendar

--- a/styles/main.css
+++ b/styles/main.css
@@ -170,17 +170,16 @@ main h1{ /*Code for title above header*/
 
 #eventDisplay{
   display: none;
-  background-color: rgb(58, 58, 58); /*Temp as of mar 11*/
-  color: white;
+  background-color: white;
   position: absolute;
   overflow-y: auto; /*User can scroll down when too many events are displaying*/
   margin-left: 4%;
   margin-right: 4%;
   margin-top: var(--header-size);
   margin-bottom: 20%;
-  width: 90%;
   z-index: 5;
   max-height: 80%;
+  border-color: black;
   border-radius: 10px;
 }
 /*----------------------------------------------------------------------------------------*/
